# pycytominer

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  debug.py  docs-requirements.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_request.yml  feature_request.yml  general_questions.yml
.github/actions/setup-env/: action.yaml
.github/workflows/: codecov.yml  dependabot.yml  docs-build.yml  docs-preview.yml  docs.yml  integration-test.yml  pre-commit-ci.yml  publish-to-pypi.yml  pypi-release.yml  pytest.yml  python-app.yml  release-drafter.yml
dev_tools/commitizen/: CHANGELOG.md.j2
docs/: Makefile  README.md  architecture.data.rst  architecture.rst  conf.py  cyto_utils.md  docs-requirements.txt  functions.md  index.rst  install.md  install.rst  modules.rst  operations.md  pycytominer.aggregate.rst  pycytominer.annotate.rst  pycytominer.consensus.rst  pycytominer.cyto_utils.blocklist.rst  pycytominer.cyto_utils.cells.rst  pycytominer.cyto_utils.collate.rst  pycytominer.cyto_utils.features.rst  pycytominer.cyto_utils.load.rst  pycytominer.cyto_utils.modz.rst  pycytominer.cyto_utils.output.rst  pycytominer.cyto_utils.rst  pycytominer.cyto_utils.util.rst  pycytominer.cyto_utils.write_gct.rst  pycytominer.feature_select.rst  pycytominer.normalize.rst  pycytominer.operations.rst  pycytominer.rst  pycytominer.tests.rst  pycytominer.tests.test_cyto_utils.rst  pycytominer.tests.test_data.rst  pycytominer.tests.test_operations.rst  requirements.txt  tutorial.md  tutorial.rst  tutorials.rst  walkthrough.md  walkthrough.rst  (+1 more)
docs/_static/: custom.css
docs/tutorials/: introduction_to_pycytominer.ipynb  single_cell_qc_profiling.ipynb
logo/: README.md
pycytominer/: __about__.py  __config__.py  __init__.py  aggregate.py  annotate.py  audit.py  cli.py  consensus.py  correlation_threshold.py  count_na_features.py  covariance.py  feature_select.py  get_na_columns.py  normalize.py  replicate_correlation.py  sparse_random_projection.py  upload.py  variance_threshold.py  write_gct.py
pycytominer/core/: __init__.py  operation.py  profiles.py
pycytominer/cyto_utils/: DeepProfiler_processing.py  __init__.py  anndata_utils.py  annotate_cmap.py  annotate_custom.py  blocklist.py  cell_locations.py  cell_locations_cmd.py  cells.py  collate.py  collate_cmd.py  compress.py  consensus.py  cp_aggregate.py  cp_image_features.py  features.py  indices.sql  ingest_config.ini  load.py  modz.py  output.py  parse_cp_features.py  parse_cp_features_cmd.py  single_cell_ingest_utils.py  sqlite.py  transform.py  upload_utils.py  util.py  write_gct.py  write_parquet.py
pycytominer/cyto_utils/database_config/: ingest_config.ini
pycytominer/cyto_utils/sqlite/: clean.py  convert.py  meta.py
pycytominer/data/: blacklist_features.txt  blocklist_features.txt  blocklists.json  blocklists.yaml  default_blocklists.yaml  metadata_feature_dictionary.txt
pycytominer/feature_importance/: __init__.py
pycytominer/models/: __init__.py
pycytominer/operations/: __init__.py  correlation_threshold.py  frequency_threshold.py  get_na_columns.py  noise_removal.py  transform.py  variance_threshold.py
pycytominer/pooled/: process.py
pycytominer/tests/: test_aggregate.py  test_aggregate_profiles.py  test_annotate.py  test_annotate_cmap.py  test_audit.py  test_compress.py  test_consensus.py  test_correlation_threshold.py  test_count_na_features.py  test_covariance.py  test_feature_blacklist.py  test_feature_infer.py  test_feature_select.py  test_get_na_columns.py  test_normalize.py  test_replicate_correlation.py  test_sparse_random_projection.py  test_transform.py  test_variance_threshold.py  test_write_gct.py
pycytominer/tests/test_cyto_utils/: conftest.py  test_DeepProfiler_processing.py  test_annotate_custom.py  test_cell_locations.py  test_cells.py  test_collate.py  test_compress.py  test_cp_aggregate.py  test_cp_image_features.py  test_feature_blacklist.py  test_feature_drop_outlier.py  test_feature_infer.py  test_features_util.py  test_load.py  test_modz.py  test_output.py  test_parse_cp_features.py  test_single_cell_ingest_utils.py  test_sqlite.py  test_sqlite_convert.py  test_transform.py  test_util.py  test_write_gct.py
pycytominer/tests/test_operations/: test_correlation_threshold.py  test_get_na_columns.py  test_sparse_random_projection.py  test_transform.py  test_variance_threshold.py
pycytominer/tests/test_pooled/: test_process.py
pycytominer/utils/: __init__.py  output.py  warnings.py
tests/: test_aggregate.py  test_annotate.py  test_cli.py  test_consensus.py  test_feature_select.py  test_normalize.py
tests/minimal_tests/: conftest.py  test_minimal_install.py
tests/minimal_wheel_build_tests/: conftest.py  test_minimal_wheel_build.py
tests/test_cyto_utils/: conftest.py  test_DeepProfiler_processing.py  test_anndata_utils.py  test_annotate_custom.py  test_blocklist.py  test_cell_locations.py  test_cells.py  test_collate.py  test_cp_image_features.py  test_feature_blocklist.py  test_feature_drop_outlier.py  test_feature_infer.py  test_features_count_na.py  test_features_util.py  test_load.py  test_modz.py  test_output.py  test_parse_cp_features.py  test_single_cell_ingest_utils.py  test_util.py  test_write_gct.py
tests/test_operations/: test_correlation_threshold.py  test_frequency_threshold.py  test_get_na_columns.py  test_transform.py  test_variance_threshold.py
tests/utils/: test_warnings.py
tutorials/: general_usage.ipynb  test.ipynb
tutorials/nbconverted/: single_cell_usage.py
walkthroughs/: pycytominer_cli.ipynb  single_cell_usage.ipynb  single_cell_usage.py  using_cytotable_data_in_pycytominer.ipynb
walkthroughs/data/: barcode_platemap.csv
walkthroughs/nbconverted/: single_cell_usage.py
(+63 files in other folders)
