[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80", "setuptools-scm[simple]>=8" ]

[project]
name = "pycytominer"
description = "Python package for processing image-based profiling data"
readme = "README.md"
license = "BSD-3-Clause"
maintainers = [
  { name = "Dave Bunten", email = "dave.bunten@cuanschutz.edu" },
  { name = "Gregory P. Way", email = "gregory.way@cuanschutz.edu" },
  { name = "Kenneth I. Brewer", email = "ken@kenbrewer.com" },
]
authors = [
  { name = "Adeniyi Adeboye" },
  { name = "Alexandr A. Kalinin" },
  { name = "Allen Goodman" },
  { name = "Anne E. Carpenter" },
  { name = "Beth A. Cimini" },
  { name = "Charlotte Bunne" },
  { name = "Dave Bunten" },
  { name = "Erik Serrano" },
  { name = "Erin Weisbart" },
  { name = "Gregory P. Way" },
  { name = "Hillary Tsang" },
  { name = "Jenna Tomkinson" },
  { name = "John Arevalo" },
  { name = "Juan Caicedo" },
  { name = "Kenneth I. Brewer" },
  { name = "Michael Bornholdt" },
  { name = "Nasim Jamali" },
  { name = "Niranj Chandrasekaran" },
  { name = "Rebecca Senft" },
  { name = "Roshan Kern" },
  { name = "Ruifan Pei" },
  { name = "Shantanu Singh" },
  { name = "Stephen Fleming" },
  { name = "Stephen J. Taylor" },
  { name = "Vincent Rubinetti" },
]
requires-python = ">=3.10,<3.15"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "fire>=0.5",
  "numpy>=1.16.5",
  "pandas>=1.2",
  "pyarrow>=8",
  "scikit-learn>=0.21.2",
  "scipy>=1.5; python_version<'3.13'",
  "scipy>1.13.1; python_version>'3.12'",
  "sqlalchemy>=1.3.6,<3",
]

optional-dependencies.anndata = [
  "anndata<0.12.2; python_version<'3.11'",
  "anndata>=0.12.2; python_version>='3.11'",
  "zarr<3.1.1; python_version<'3.11'",
  "zarr>=3.1.1; python_version>='3.11'",
]
optional-dependencies.cell-locations = [
  "boto3>=1.26.79",
  "fsspec>=2023.1",
  "s3fs>=2023.4",
]
optional-dependencies.collate = [
  "csvkit<3",
  "cytominer-database==0.3.4",
  "setuptools>=65,<83",
]
urls.Homepage = "https://pycytominer.readthedocs.io/"
urls.Repository = "https://github.com/cytomining/pycytominer"
scripts.pycytominer = "pycytominer.cli:main"

[dependency-groups]
dev = [
  "codecov>=2.1.12",
  "commitizen>=3.12,<5",
  "mypy>=1.11.2,<1.21",
  "pandas-stubs<2.2.2.240909; python_version<'3.10'",
  "pandas-stubs==2.2.2.240909; python_version>='3.10'",
  "pre-commit>=3.3.2",
  "pytest>=5.0.1",
  "pytest-cov>=4.1,<8",
  "ruff>=0.3.4,<0.16",
  "types-openpyxl>=3.1.5.20240918,<4",
  "types-sqlalchemy>=1.4.53.38,<2",
]
docs = [
  "autodoc>=0.5,<0.6",
  "dunamai>=1.19,<2",
  "furo>=2023.9.10,<2026",
  "groundwork-sphinx-theme>=1.1.1,<2",
  "ipython>=8.12,<9",
  "lxml[html-clean]>=5.4,<7",
  "mkdocs",
  "mock>=5.1,<6",
  "nbsphinx>=0.9.3,<0.10",
  "sphinx>=7.1,<8.2",
  "sphinx-autoapi>=3,<4",
  "sphinx-autobuild>=2021.3.14,<2025",
  "sphinx-copybutton>=0.5.2,<0.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "pycytominer*" ]

[tool.setuptools_scm]
root = "."

[tool.ruff]
target-version = "py39"
line-length = 88
fix = true

format.preview = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pygrep-hooks
  "PGH",
  # ruff
  "RUF",
  # flake8-bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # pyupgrade
  "UP",
  "W",
  # flake8-2020
  "YTT",
  # The following checks are disabled, but we are working towards enabling them in the future.
  # flake8-bugbear
  # "B",
  # mccabe
  # "C90",
  # tryceratops
  # "TRY",
]
lint.ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]
# Ignore `E402` and `F401` (unusued imports) in all `__init__.py` files
lint.per-file-ignores."__init__.py" = [ "E402", "F401" ]
lint.per-file-ignores."pycytominer/cyto_utils/*" = [
  # S608 (raw sql operations) is ignored because it is a common pattern in the cyto_utils module
  "S608",
]
# Ignore assert statements in tests
lint.per-file-ignores."tests/*" = [ "S101" ]

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
  "ignore::DeprecationWarning:pycytominer.*",
]
markers = [
  "large_data_tests: tests which involve the use of large data and could involve longer time durations.",
]

[tool.mypy]
exclude = [
  # ignore notebook-based walkthroughs
  "walkthroughs",
  # ignore tests dir
  "tests",
]

[[tool.mypy.overrides]]
# ignore missing import errors for the following
# packages which do not have standard type stubs
# or experience issues with imported types.
module = [
  "sklearn.*",
  "scipy.*",
  "cytominer_database.*",
  "fire.*",
  "boto3.*",
  "botocore.*",
  "anndata.*",
  "zarr.*",
  "h5py.*",
]
ignore_missing_imports = true

[tool.commitizen]
# This version is used for changelog tracking and is updated using `cz bump`
version = "1.4.0"
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "commitizen"
update_changelog_on_bump = true
template = "dev_tools/commitizen/CHANGELOG.md.j2"
version_files = [
  "CITATION.cff",
]
